[tool.poetry]
name = "building-automation-agent"
version = "0.1.0"
description = ""
authors = ["Hamza Qureshi <hamza7771.861@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-google-genai = "^2.0.7"
langchain-core = "^0.3.29"
langgraph = "^0.2.61"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
